src/app/navbar/navbar.css
.navbar-desc {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.navbar-desc > h2 {
  text-align: left;
}

.navbar-green {
  color: var(--green);
  margin-top: 0;
}

.wave {
  animation-name: wave-animation;
  animation-duration: 2.5s;
  animation-iteration-count: infinite;
  transform-origin: 70% 70%;
  display: inline-block;
}

@keyframes wave-animation {
    0% { transform: rotate( 0.0deg) }
   10% { transform: rotate(14.0deg) }
   20% { transform: rotate(-8.0deg) }
   30% { transform: rotate(14.0deg) }
   40% { transform: rotate(-4.0deg) }
   50% { transform: rotate(10.0deg) }
   60% { transform: rotate( 0.0deg) }
  100% { transform: rotate( 0.0deg) }
}


.navbar-links {
  display: flex;
  justify-content: flex-end;
  margin-left: auto;
  flex-direction: row;
  height: fit-content;
  padding-left: 1rem;
}

.navbar-link-container {
  margin-right: 1rem;
}

.navbar-link {
  color: var(--gray);
  font-family: var(--font-manrope);
  font-size: 1.5em;
  text-decoration-thickness: 2px;
  transition: 400ms color;
}

.navbar-link[data-active-page="true"] {
  color: inherit;
  transition: 400ms color;
}

@media screen and (max-width: 768px) {
  .navbar-link-container {
    margin: 0.4rem 0;
  }
  .navbar-link-container:last-child {
    margin-bottom: 0;
  }

  .navbar-link-container:first-child {
    margin-top: 0;
  }

  .navbar-links {
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-end;
  }
}

